# AGORA

./: .gitattributes  .gitignore  README.md  index.html  pyproject.toml
assets/checkpoints/DGGHEAD-148_stage1_res256/: dataset_config.json  model_config.json  optimization_config.json  train_setup.json
assets/checkpoints/DGGHEAD-158_stage2_res512/: dataset_config.json  model_config.json  optimization_config.json  train_setup.json
assets/flame/: uv_to_3d__vert_idx_mapping.pt
assets/gghead/: narrow_facial_flame_mask.npy  narrow_facial_flame_mask_with_eyeballs_v2.npy  uv_position_weights_dejavu_adapted.npy  uv_position_weights_dejavu_adapted_normalized.npy
demo/: index.html  main.js
demo/data/: driving_sequence.json
demo/data/seed_107/: camera_params.json
demo/data/seed_109/: camera_params.json
demo/data/seed_110/: camera_params.json
demo/data/seed_118/: camera_params.json
demo/data/seed_17/: camera_params.json
demo/data/seed_25/: camera_params.json
demo/data/seed_4/: camera_params.json
scripts/: evaluate_fid.py  reenact_list.txt  setup_cuda_deps.sh  train_gghead.py
scripts/deform_blendshapes/: create_blendshapes.py  reenact_avatar_multi_id.py  reenact_avatar_multi_id__deform_blendshapes.py
scripts/deform_blendshapes_pca_v2/: benchmark_cpu_inference.py  create_svd_basis_and_dataset.py  reenact_avatar_multi_id__svd_mlp.py  train_mlp_regressor.py
scripts/deform_blendshapes_pca_v2/evaluation/: evaluate_aed.py  evaluate_fid.py  evaluate_id.py  pca_inference_utils.py
scripts/deform_blendshapes_pca_v2/web_inference/: export_driving_sequence.py  export_model_for_web.py
scripts/deform_blendshapes_pca_v2/web_inference/splat/: main.js
scripts/metrics/: evaluate_aed.py  evaluate_fid.py  evaluate_fid_with_vis.py  evaluate_id.py  measure_fps.py
src/gghead/: env.py
src/gghead/dataset/: image_folder_dataset.py
src/gghead/eg3d/: loss.py  train_loop.py
src/gghead/eg3d/metrics/: frechet_inception_distance.py  metric_main_mesh.py  metric_utils_mesh.py
src/gghead/eg3d/torch_utils/: misc.py
src/gghead/eg3d/training/: networks_stylegan2.py  networks_stylegan2_additive_condition.py  networks_stylegan2_double_modulation.py
src/gghead/model_manager/: base_model_manager.py  dgghead_model_manager.py  finder.py  gghead_model_manager.py
src/gghead/models/: dyn_gaussian_discriminator.py  dyn_gghead_model.py  gaussian_discriminator.py  gghead_model.py  stylegan2.py  stylegan2_additive_modulation.py  stylegan2_double_modulation.py
src/gghead/util/: flame_rasterizer.py  logging.py  metrics.py  mouth_interior.py  mouth_interior_torch.py  rotation.py
static/css/: index.css
